[package]
name = "bt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.4.0"
nom = "7.1.3"
rand = "0.8.5"
tokio-test = "0.4.2"
reqwest = "0.11.17"
rust-crypto = "0.2.36"
ordered_hash_map = "0.2.0"
urlencoding = "2.1.2"
anyhow = "1.0.71"
dyn_bitmap = "0.3.2"
